syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.ssu.commerce.book.grpc";

service UpdateBookState {
  rpc UpdateBookState (UpdateBookStateRequest) returns (UpdateBookStateResponse) {

  }
}

message UpdateBookStateType {
  string id = 1;
  BookState state = 2;
}

message UpdateBookStateRequest {
  string token = 1;
  repeated UpdateBookStateType updateBookStateDtos = 2;
}

message UpdateBookStateResponse {
  bool updateBookStateResponse = 1;
}

enum BookState {
  REGISTERED = 0;
  LOAN = 1;
  LOOSE = 2;
  DAMAGE = 3;
  LOAN_PROCESSING = 4;
  RETURN = 5;
}